manifest-overwork/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-view-modes-overwork
  namespace: starlight-view-modes-overwork
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-view-modes-overwork
  ports:
    - name: http
      port: 80
